--- a/public/index.html
+++ b/public/index.html
@@ -4,286 +4,50 @@
   <head>
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <title>shrtnr</title>
-    <style type="text/css" media="screen">
-      body {
-        margin-top: 100px;
-        font-family:Arial, Verdana;
-      }
-      #shrtnr {
-        font-size: 150%;
-      }
-      #header #explain {
-        font-style: italic;
-      }
-      .input {
-        font-family: Arial, Verdana;
-        font-size: 15px;
-        padding: 5px;
-        border: 1px solid #b9bdc1;
-        width: 435px;
-        color: #797979;
-      }
-      .submitted {
-        width:350px;
-      }
-      .button {
-        display:inline-block;
-
-        margin:10px 55px 10px 0;
-        font-weight: bold;
-        line-height: 1;
-        padding: 6px 10px;
-        cursor:pointer;
-        color: white;
-
-        background: #6789BF;
-
-        text-align: center;
-
-        border: 1px solid #445E99;
-        -moz-border-radius: 10px;
-        -webkit-border-radius: 10px;
-        border-radius: 10px;
-      }
-      #submit {
-        float: right;
-        margin-top: 7px;
-      }
-      #content {
-        margin: 0px auto;
-        width:500px;
-      }
-      #suggestions {
-        display: inline-block;
-        margin-top: 14px;
-        margin-left: 4px;
-      }
-      #response {
-        display:none;
-        margin-top: 10px;
-      }
-      .field label {
-        display:inline-block;
-        border: 1px solid #b9bdc1;
-        margin-left:-5px;
-        font-size: 15px;
-        padding: 5px;
-
-        -moz-border-radius: 0px 10px 10px 0px;
-        -webkit-border-radius: 0px 10px 10px 0px;
-        border-radius: 0px 10px 10px 0px;
-
-        color: white;
-
-        background: #6789BF;
-      }
-      #submitted-tags {
-        margin-top: 10px;
-      }
-      #submitted-tags li {
-        padding: 2px 7px 2px 7px;
-
-        display: inline-block;
-
-        style:;
-      }
-      #error {
-        display:none;
-        margin-top: 10px;
-        color:red;
-      }
-    </style>
+    <link href="/stylesheets/default.css" media="screen" rel="stylesheet" type="text/css" />
     <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js"></script>
+    <script type="text/javascript" src="javascripts/application.js"></script>
     <script type="text/javascript">
-      function SubmitHandler(element, url, tags, data) {
-        this.element = element;
+        function submitData(params) {
+          var url = params[0].attr('value');
+          var tags = params[1].hasClass('placeholding') ? '' : params[1].attr('value');
 
-        this.url = url;
-        this.tags = tags;
 
-        this.data = data;
-
-        this.enabled = true;
-      }
-
-      SubmitHandler.prototype.register = function() {
-        var self = this;
-
-        this.element.click(function(event) {
-          if(self.url.hasClass('placeholding')) {
-            return;
+          if(url && !url.match(/^\s*$/)) {
+            getJSON
+            (
+              '/c.json?url=' + encodeURIComponent(url) + "&tags=" + encodeURIComponent(tags),
+              [writeSubmitData]
+            );
           }
+        }
 
-          if(self.enabled) {
-            self.enabled = false;
+        function writeSubmitData(data) {
+          $('#form').slideUp();
 
-            self.element.animate({
-              opacity : 0.5
-            });
-
-            var tags = self.tags.hasClass('placeholding') ? '' : self.tags.attr('value');
-
-            self.data(self.url.attr('value'), tags);
-          }
-        });
-      }
-
-      function InputPlaceHolder(element, placeholder) {
-        this.element = element;
-        this.placeholder = placeholder;
-      }
-
-      InputPlaceHolder.prototype.register = function() {
-        var self = this;
-        this.element.focus(function() {
-          var value = self.element.attr('value');
-
-          if(value && value == self.placeholder) {
-            self.element.attr('value', '');
-          }
-
-        });
-        this.element.blur(function() {
-          var value = self.element.attr('value');
-
-          if(!value || value.match(/^\s*$/)) {
-            self.element.attr('value', self.placeholder);
-
-            self.element.addClass('placeholding');
+          if(data['error']) {
+            
+            $('#error').append('  ' + data['error']).fadeIn();
           }
           else {
-            self.element.removeClass('placeholding');
-          }
-        });
+            $('#shortened-url').attr('value', data['short_url']);
+            $('#edit-url').attr('value', data['edit_url']);
+            $('#original-url').attr('value', data['url']);
 
-         self.element.attr('value', self.placeholder);
-      }
+            tag_data = '';
+            if(data['tags'].length > 0) {
+              var tags = data['tags'];
 
-      function TokenComplete(element, separator, data) {
-        this.element = element;
-        this.separator = separator;
-        this.data = data;
-
-        this.tokens = [];
-        this.oldTokens = [];
-      }
-
-      TokenComplete.prototype.register = function() {
-        var self = this;
-
-        this.element.keyup(function(event) {
-          delay(function() {
-            var keyCode = event.keyCode;
-            if(keyCode != 39 && keyCode != 37) {
-              self.update(keyCode);
+              for(var i in tags ) {
+                tag_data += '<li><a href="/tag/' + tags[i]['tag']['tag_value'] + '">' + tags[i]['tag']['tag_value'] +'</a></li>'
+              }
             }
-          }, 250);
-        });
-      }
 
-      TokenComplete.prototype.update = function(keyCode) {
-        this.oldTokens = this.tokens;
-        this.tokens = this.element.attr('value').split(this.separator);
+            $('#submitted-tags').html(tag_data);
 
-        this.data(this.tokens[this.modifiedIndex()]);
-      }
-
-      TokenComplete.prototype.modifiedIndex = function() {
-
-        if(this.tokens.length > this.oldTokens.length) {
-          return this.oldTokens.length == 0 ? 0 : this.oldTokens.length;
-        }
-
-        for(var token in this.tokens) {
-          if(this.tokens[token] != this.oldTokens[token]) {
-            return token;
+            $('#response').fadeIn();
           }
         }
-
-        return this.tokens.length - 1;
-      }
-
-      function getJSON(url, callbacks, params) {
-        $.getJSON(url, function(data) {
-          for(i in callbacks) {
-            callbacks[i](data, params);
-          }
-        });
-      }
-
-      function getMatchingTags(tag) {
-        if(tag && !tag.match(/^\s*$/)) {
-          getJSON('/t/' + tag + '.json', [writeTagSuggestion]);
-        }
-      }
-
-      function writeTagSuggestion(data) {
-        var element = $('#suggestions');
-
-        if(data.length == 0) {
-          $('#suggestions').fadeOut('slow', function() {
-            element.html('');
-          });
-        }
-        else {
-          $('#suggestions').fadeIn('slow');
-
-          var text = "how about "
-          if(data.length == 1) {
-            text += data[0]['tag_value'] + "?";
-          }
-          else if(data.length > 1) {
-            text += data[0]['tag_value'] + ", or " + data[1]['tag_value'] + "?";
-          }
-          element.html(text);
-        }
-      }
-
-      function submitData(url, tags) {
-        if(url && !url.match(/^\s*$/)) {
-          getJSON
-          (
-            '/c.json?url=' + encodeURIComponent(url) + "&tags=" + encodeURIComponent(tags),
-            [writeSubmitData]
-          );
-        }
-      }
-
-      function writeSubmitData(data) {
-        $('#form').slideUp();
-
-        if(data['error']) {
-          
-          $('#error').append('  ' + data['error']).fadeIn();
-        }
-        else {
-          $('#shortened-url').attr('value', data['short_url']);
-          $('#edit-url').attr('value', data['edit_url']);
-          $('#original-url').attr('value', data['url']);
-
-          tag_data = '';
-          if(data['tags'].length > 0) {
-            var tags = data['tags'];
-
-            for(var i in tags ) {
-              tag_data += '<li>' + tags[i]['tag']['tag_value'] +'</li>'
-            }
-          }
-
-          $('#submitted-tags').html(tag_data);
-
-          $('#response').fadeIn();
-
-        }
-      }
-
-      var delay = (function(){
-        var timer = 0;
-          return function(callback, ms){
-          clearTimeout (timer);
-          timer = setTimeout(callback, ms);
-        };
-      })();
 
       $(document).ready(function() {
         urlPlaceHolder = new InputPlaceHolder($('#url'), "type in a url you'd like to shorten");
@@ -292,10 +56,10 @@
         urlPlaceHolder.register();
         tagPlaceHolder.register();
 
-        tagComplete = new TokenComplete($('#tags'), ', ', getMatchingTags)
+        tagComplete = new TokenComplete($('#tags'), ',', getMatchingTags)
         tagComplete.register();
 
-        submitHandler = new SubmitHandler($('#submit'), $('#url'), $('#tags'), submitData);
+        submitHandler = new SubmitHandler($('#submit'), [$('#url'), $('#tags')], submitData);
         submitHandler.register();
       });
     </script>
